maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit) {
    if (!estFaceMur()) {
      keepHandOnSideWall();
    } else {
      left();
    }
    right();
  }
  prendBiscuit();
}